# GRAVI-NEURAL

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  COMPLETION.md  COMPLETION_CERTIFICATE.txt  CONTRIBUTING.md  DEPLOY.md  Dockerfile  INSTALL.md  LICENSE  MANIFEST.in  Makefile  NOTICE  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  setup.cfg  upload_gravineural.py
configs/: bbh.yaml  bns.yaml  default.yaml
examples/: quick_start.py
gravineural/: __init__.py  version.py
gravineural/core/: __init__.py  cno.py  geodesic.py  gno.py  mgan.py  stcn.py
gravineural/environments/: __init__.py  bbh.py  bns.py  ccsn.py
gravineural/inference/: __init__.py  predictor.py
gravineural/monitoring/: __init__.py  alert_engine.py  efe_monitor.py
gravineural/utils/: config.py  constants.py  geometry.py
notebooks/: 01_quick_start.ipynb  02_waveform_generation.ipynb
paper/: GRAVI-NEURAL_E-LAB-08_v1.0.0.docx
scripts/: benchmark.py  daily_report.py  run_efe_validation.py
tests/: test_basic.py
