[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gravi-neural-engine"
version = "1.0.0"
description = "GRAVI-NEURAL: Covariant Neural Characterization of Metric Tensor Perturbations"
authors = [{name = "Samir Baladi", email = "gitdeeper@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
"Homepage" = "https://gravineural.netlify.app"
"GitHub" = "https://github.com/gitdeeper11/GRAVI-NEURAL"
"GitLab" = "https://gitlab.com/gitdeeper11/GRAVI-NEURAL"
"DOI" = "https://doi.org/10.5281/zenodo.19871822"

[tool.setuptools.packages.find]
where = ["."]
include = ["gravineural*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=gravineural"
