[metadata]
name = gravi-neural-engine
version = 1.0.0
author = Samir Baladi
author_email = gitdeeper@gmail.com
description = GRAVI-NEURAL: Covariant Neural Characterization of Metric Tensor Perturbations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gravineural.netlify.app
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.11
install_requires =
    numpy>=1.24.0
    scipy>=1.10.0

[options.packages.find]
where = .
include = gravineural*
